--- a/firma_keys_ms.yaml
+++ b/firma_keys_ms.yaml
@@ -1,6 +1,6 @@
 openapi: 3.1.0
 info:
-  title: firma_keys_ms
+  title: Keys microservice
   version: '1.0'
 servers:
   - url: 'http://localhost:8093'
