--- a/firma_signing_ms.yaml
+++ b/firma_signing_ms.yaml
@@ -50,6 +50,8 @@ paths:
               properties:
                 data:
                   type: string
+                user_id:
+                  type: integer
               required:
                 - data
             examples:
